--- a/config/config.yaml
+++ b/config/config.yaml
@@ -12,5 +12,9 @@ data_validation:
   ALL_REQUIRED_FILES: ["test","train","validation"]
 
 
+data_transformation:
+  root_dir: artifacts/data_transformation
+  data_path: artifacts/data_ingestion/samsum_dataset
+  tokenizer_name: google/pegasus-cnn_dailymail
 
 
